fix left margin on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -27,17 +27,37 @@
 // Vendor
 @import
     'vendor/highlight';
-body{
-    margin: 40px auto 40px 5%;
+
+body {
+    margin: 40px auto 40px auto;
     max-width: 700px;
     line-height:1.6;
     font-size:18px;
     color:#444;
     padding:0 10px
 }
+
+@media screen and (min-width:800px) {
+    body{
+        margin: 40px auto 40px 5%;
+        max-width: 700px;
+        line-height:1.6;
+        font-size:18px;
+        color:#444;
+        padding:0 10px
+    }
+}
+
+#particles-js {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
 h1,h2,h3{
     line-height:1.2;
 }
+
 hr {
     color: #eee;
 }
